# leetcode-bot

./: .dockerignore  .gitignore  README.md  dockerfile  flake.nix  go.mod  go.sum  main.go
conf/: config.go
discord/: commands.go  discord.go
fetcher/: Cargo.toml  go.mod  go.sum  main.go
fetcher/conf/: configuration.go
fetcher/models/: timestamp.go
fetcher/service/: leetcode.go  sqs.go
fetcher/src/: configuration.rs  main.rs  models.rs
fetcher/src/service/: mod.rs  sqs.rs
fetcher/src/service/leetcode/: mod.rs  submissions.rs  user.rs
infrastructure/: .gitignore  .terraform.lock.hcl  main.tf  variables.tf
models/: redis.go
sender/: Cargo.toml  go.mod  go.sum  main.go
sender/conf/: configuration.go
sender/handlers/: lambdaHandler.go
sender/services/: discord.go
sender/src/: configuration.rs  handler.rs  main.rs  service.rs
sender/utils/: sqs.go
service/: service.go
