[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
aws-config = { version = "0.101.0", features = ["behavior-version-latest"] }
aws-sdk-sqs = "0.38.0"
aws-sdk-dynamodb = "0.38.0"
reqwest-graphql = "1.0.0"
serde_json = "1.0.108"
env_logger = "0.10.1"
log = "0.4.20"
