[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.33.0", features = [ "rt-multi-thread", "macros"] }
aws-config = { version = "0.101.0", features = ["behavior-version-latest"] }
aws-sdk-sqs = "0.38.0"
aws-sdk-dynamodb = "0.38.0"
reqwest-graphql = "1.0.0"
serde_json = "1.0.108"
openssl ={ version = "0.10.59", features = ["vendored"] }
tracing = { version="0.1.40", features = ["log"] }
tracing-subscriber = { version="0.3.18", default-features = false, features = ["fmt"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
