[package]
name = "sender"
version = "0.1.0"
edition = "2021"


[dependencies]
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["sqs"] }

lambda_runtime = "0.8.3"
serde = "1.0.192"
serenity = "0.11.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
